--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         .logo {
             font-size: 1.5rem;
             font-weight: 700;
-            color: #2563eb;
+            color: #1e40af;
             display: flex;
             align-items: center;
             gap: 0.5rem;
@@ -61,7 +61,7 @@
             top: 0;
             left: 0;
             height: 3px;
-            background: #2563eb;
+            background: linear-gradient(90deg, #1e40af 0%, #3b82f6 100%);
             z-index: 1001;
             transition: width 0.3s ease;
         }
@@ -69,7 +69,7 @@
         /* Hero Section */
         .hero {
             padding: 8rem 0 4rem;
-            background: linear-gradient(135deg, #f8fafc 0%, #ffffff 100%);
+            background: linear-gradient(135deg, #f8fafc 0%, #ffffff 50%, #eff6ff 100%);
             text-align: center;
             position: relative;
             overflow: hidden;
@@ -142,7 +142,7 @@
         }
 
         .section:nth-child(even) {
-            background: #f8fafc;
+            background: linear-gradient(135deg, #f8fafc 0%, #ffffff 100%);
         }
 
         .section:nth-child(odd) {
@@ -166,7 +166,7 @@
 
         .section-emoji {
             font-size: 2.5rem;
-            background: #2563eb;
+            background: linear-gradient(135deg, #1e40af 0%, #3b82f6 100%);
             color: white;
             padding: 1rem;
             border-radius: 16px;
@@ -175,7 +175,7 @@
             justify-content: center;
             min-width: 4rem;
             height: 4rem;
-            box-shadow: 0 4px 20px rgba(37, 99, 235, 0.2);
+            box-shadow: 0 4px 20px rgba(30, 64, 175, 0.25);
         }
 
         .section-title {
@@ -221,7 +221,7 @@
         .card:hover {
             transform: translateY(-4px);
             box-shadow: 0 8px 30px rgba(0, 0, 0, 0.1);
-            border-color: #2563eb;
+            border-color: #3b82f6;
         }
 
         .card h3 {
@@ -273,7 +273,7 @@
             background: #ffffff;
             padding: 2rem;
             border-radius: 12px;
-            border-left: 4px solid #2563eb;
+            border-left: 4px solid #3b82f6;
             opacity: 1;
             transform: translateY(0);
             transition: all 0.6s ease;
@@ -295,7 +295,7 @@
         .principle-item:hover {
             transform: translateY(-4px);
             box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
-            border-left-color: #1d4ed8;
+            border-left-color: #1e40af;
         }
 
         .principle-title {
@@ -314,7 +314,7 @@
 
         /* Highlight boxes */
         .highlight-box {
-            background: #2563eb;
+            background: linear-gradient(135deg, #1e40af 0%, #3b82f6 100%);
             color: white;
             padding: 3rem;
             border-radius: 16px;
@@ -323,7 +323,7 @@
             opacity: 1;
             transform: translateY(0);
             transition: all 0.6s ease;
-            box-shadow: 0 8px 30px rgba(37, 99, 235, 0.3);
+            box-shadow: 0 8px 30px rgba(30, 64, 175, 0.3);
             position: relative;
             overflow: hidden;
         }
@@ -340,7 +340,7 @@
 
         .highlight-box:hover {
             transform: translateY(-4px);
-            box-shadow: 0 12px 40px rgba(37, 99, 235, 0.4);
+            box-shadow: 0 12px 40px rgba(30, 64, 175, 0.4);
         }
 
         .highlight-box h3 {
