--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
         .hero-content {
             max-width: 800px;
-            margin: 0;
+            margin: 0 auto;
             padding: 0 2rem;
             position: relative;
             z-index: 1;
